k/logs/012_ingress/scratch/lab/50-mw.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: demo
spec:
  redirectScheme:
    scheme: https
    port: "30081"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-auth
  namespace: demo
spec:
  basicAuth:
    secret: admin-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-admin
  namespace: demo
spec:
  stripPrefix:
    prefixes: [/admin]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop
  namespace: demo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: demo-redirect-https@kubernetescrd
spec:
  tls:
    - hosts: [shop.localhost, admin.localhost]
      secretName: som-tls
  rules:
    - host: shop.localhost
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: menu, port: {number: 80}}}}
          - {path: /api, pathType: Prefix, backend: {service: {name: api, port: {name: http}}}}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-admin
  namespace: demo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: demo-redirect-https@kubernetescrd,demo-admin-auth@kubernetescrd,demo-strip-admin@kubernetescrd
spec:
  tls:
    - hosts: [shop.localhost]
      secretName: som-tls
  rules:
    - host: shop.localhost
      http:
        paths:
          - {path: /admin, pathType: Prefix, backend: {service: {name: admin, port: {number: 80}}}}
